Correct Professional.css to show image on mobile view

--- a/chicobarbearia/src/components/Professionals/Professionals.css
+++ b/chicobarbearia/src/components/Professionals/Professionals.css
@@ -104,10 +104,13 @@
         height: 50px !important;
     }
 
-    .character-img img {
+    .character-img{
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .character-img img {
         max-height: 60dvh;
         border-radius: 100%;
         padding-top: 10%;
